<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".views.activity.LinkVehicleActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/em_explore_the_silence_virgule" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/signUp"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:visibility="invisible"
                        android:id="@+id/img_signup"
                        android:layout_width="85dp"
                        android:layout_height="35dp"
                        android:src="@drawable/contour_login"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/text_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/sign_up"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_signup"
                        app:layout_constraintEnd_toEndOf="@+id/img_signup"
                        app:layout_constraintStart_toStartOf="@+id/img_signup"
                        app:layout_constraintTop_toTopOf="@+id/img_signup" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/image_signup"
                    android:visibility="invisible"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/triangle_white"
                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_login"
                        android:layout_width="85dp"
                        android:layout_height="35dp"
                        android:src="@drawable/contour_login"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/text_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/login"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15dp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_login"
                        app:layout_constraintEnd_toEndOf="@+id/img_login"
                        app:layout_constraintStart_toStartOf="@+id/img_login"
                        app:layout_constraintTop_toTopOf="@+id/img_login" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/image_login"
                    android:visibility="invisible"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/triangle_white"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/scan_qr"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="142dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/quick_guide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_sms" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scan_qr"
                android:layout_width="201dp"
                android:layout_height="34dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:background="@drawable/button_invite_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/scan_qr_code"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="60dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/enter_qr"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scan_qr" />

            <EditText
                android:layout_marginTop="10dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:id="@+id/vin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.98"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/otp_number"
                android:textAlignment="center"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="15dp"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/link_vehicle"
                android:layout_marginBottom="20dp"
                android:layout_width="201dp"
                android:layout_height="34dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:background="@drawable/button_invite_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/continu"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loading">

        <com.cunoraz.gifview.library.GifView
            android:id="@+id/gif1"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:gif="@drawable/loading"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>