<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="fragment"
            type="com.otcengineering.em.views.fragment.InformationFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="25dp"
            android:fontFamily="@font/ausprobe"
            android:text="@string/information"
            android:textColor="@color/white"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/information"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/buttonshape_terms"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <EditText
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/transparent"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:gravity="top"
                android:hint="@string/ask_question"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@null"
                android:textSize="15dp"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/video"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/video"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/picture"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/picture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/video" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            app:layout_constraintBottom_toTopOf="@+id/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/send"
            android:layout_marginBottom="15dp"
            android:layout_width="228dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:background="@drawable/button_invite_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/send_message"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
